1.0/gml-functions.md
# GML Functions

&nbsp;

### `DynamoNoteBuffer(name)`

**Returns:** Buffer index for the named Note asset, or `undefined` if there was a problem loading content for the asset

|Name  |Datatype|Purpose                                               |
|------|--------|------------------------------------------------------|
|`name`|string  |Name of the Note asset (in your GameMaker IDE) to read|

!> Dynamo does not store file contents for quick access. This function uses `buffer_load()` to load a file. You should cache file contents if you need fast access.

&nbsp;

&nbsp;

### `DynamoNoteString(name, [default])`

**Returns:** String that contains the plaintext contents of the entire named Note asset, or a default value if there was a problem loading content for the asset

|Name       |Datatype|Purpose                                                                                   |
|-----------|--------|------------------------------------------------------------------------------------------|
|`name`     |string  |Name of the Note asset (in your GameMaker IDE) to read                                    |
|`[default]`|any     |Value to return if there was a problem reading the Note asset. Defaults to an empty string|

!> Dynamo does not store file contents for quick access. This function uses `buffer_load()` to load a file. You should cache file contents if you need fast access.

&nbsp;

&nbsp;

### `DynamoDevCheckForChanges()`

**Returns:** An array of strings that contains the name of assets that have changed, or `undefined` if no changes were found

|Name|Datatype|Purpose|
|----|--------|-------|
|None|        |       |

?> Can only be used in "dev mode" - when your game is being run from the IDE and when [`DYNAMO_DEV_MODE`](configuration) is set to `true`.

!> This function is slow and should only be called when absolutely necessary.

&nbsp;

&nbsp;

### `DynamoDevCheckForChangesOnRefocus()`

**Returns:** An array of strings that contains the name of assets that have changed, or `undefined` if no changes were found

|Name|Datatype|Purpose|
|----|--------|-------|
|None|        |       |

?> Can only be used in "dev mode" - when your game is being run from the IDE and when [`DYNAMO_DEV_MODE`](configuration) is set to `true`.

!> This function needs to be called every frame and should be placed in the Step event of a controller instance.
